<resources>
    <string name="app_name">podPAY</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="podPAY">podPAY</string>
    <string name="email"><b>Email</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="back_button">Back Button</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <i><b>Sign Up</b></i></string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="enter_your_email_and_we_ll_send_you_an_email_to_reset_your_password">Enter your Email and we\'ll send you an email to reset your password</string>
    <string name="hi">Hi</string>
    <string name="kes"><b>KES</b></string>
    <string name="product_purchased_with_transaction_charges">Product Purchased with transaction charges</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="currency">Currency:</string>
    <string name="ksh"><b>KSH</b></string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="payment_progress">Payment Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_charge_amount">Transaction charge Amount:</string>
    <string name="deposit_money">+ Deposit Money</string>
    <string name="edit"><b>EDIT</b></string>
    <string name="documents">DOCUMENTS</string>
    <string name="end_user_licence_agreement"><b>END USER LICENCE AGREEMENT</b></string>
    <string name="terms_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="contact_us"><b>CONTACT US</b></string>
    <string name="whatsapp"><b>WhatsApp</b></string>
    <string name="log_out">Log out</string>
    <string name="fingerprint"><b>FINGERPRINT</b></string>
    <string name="please_use_fingerprint_id_to_login">Please_use_fingerprint_id_to_login</string>
    <string name="click"><![CDATA[Click ->]]></string>
    <string name="overview">Overview</string>
    <string name="operations"><b>Operations</b></string>
    <string name="paybill"><b>Pay Bill</b></string>
    <string name="buy_airtime"><b>Buy Airtime</b></string>
    <string name="podPAY_to_podPAY"><b>podPAY to podPAY</b></string>
    <string name="withdraw_to_mobile_money"><b>Withdraw to mobile money</b></string>
    <string name="send_to_bank"><b>Send to Bank</b></string>
    <string name="shopping">Shopping</string>
    <string name="what_will_you_buy_with_your_transaction_charges_today">What will you buy with your transaction charges today?</string>
    <string name="search">Search</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="tucash_categories"><b>TuCash Categories</b></string>
    <string name="food">Food</string>
    <string name="fashion">Fashion</string>
    <string name="insurance">Insurance</string>
    <string name="utilities">Utilities</string>
    <string name="see_all">See All</string>
    <string name="electronics">Electronics</string>
    <string name="transactions">Transactions</string>
    <string name="refresh">Refresh</string>
    <string name="current_wallet_balance">Current Wallet Balance</string>
    <string name="send_money">Send Money</string>
    <string name="set_transaction_charge_amount">Set Transaction Charge Amount</string>
    <string name="deposit_money2">Deposit Money</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="popular">Popular</string>
    <string name="all_products">All Products</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="identity">IDENTITY</string>
    <string name="name">Name</string>
    <string name="top_up_from">Top up from</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="top_up_wallet_from_mobile_money">Top up wallet from Mobile Money</string>
    <string name="mpesalogo">mpesaLogo</string>
    <string name="top_up">Top Up</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="buy_goods">Buy Goods</string>
    <string name="withdraw">Withdraw</string>
    <string name="send">Send</string>
    <string name="paybill_no">PayBill No.</string>
    <string name="account_no">Account No.</string>
    <string name="pay">Pay</string>
    <string name="plus">+</string>
    <string name="i_am_not_a_robot"><b>I am not a Robot</b></string>
    <string name="enter_a_valid_id_number">Enter a valid id number</string>
    <string name="select_the_podPAY_logo">Select the podPAY logo</string>
    <string name="first_name">First Name</string>
    <string name="id_number">ID Number</string>
    <string name="second_name">Second Name</string>
    <string name="third_name">Third Name</string>
    <string name="login">Login</string>
    <string name="googleIconLogin">googleIconLogin</string>
    <string name="search_for_contact">search for contact</string>
    <string name="please_use_finger_print_id_to_login">Please use finger print id to login</string>
    <string name="fingerprint_unavailable_press_button">FingerPrint Unavailable? Press Button</string>
</resources>