<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoadWalletFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_wallet"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        />
    <Button
        android:id="@+id/backDepositButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_up_wallet_from_mobile_money"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orangeRed"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mpesa"
        android:contentDescription="@string/mpesalogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        />

    <EditText
        android:id="@+id/phoneDepositWallet"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="210dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/custom_phone_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="phone|number"
        android:gravity="center"
        android:autofillHints="phone"
        android:textColorHint="@color/lightGray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="265dp"
        />

    <EditText
        android:id="@+id/amountDepositWallet"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="300dp"
        android:layout_marginStart="20dp"
        android:hint="@string/ksh"
        android:textColorHint="@color/teal_700"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="number"
        android:gravity="center"
        android:autofillHints="phone"
        />

    <Button
        android:id="@+id/topUpButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_button1"
       android:layout_marginTop="400dp"
       android:layout_centerHorizontal="true"
        android:text="@string/top_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        />

</RelativeLayout>