<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TransactFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_wallet_balance"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textColor="@color/orangeRed"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/refresh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kes"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="130dp"
        />
    <TextView
        android:id="@+id/walletDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="240dp"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginTop="135dp"
        />

    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:layout_marginTop="215dp"
        android:layout_marginStart="30dp"
        />

    <Button
        android:id="@+id/sendMoneyButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="225dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/baseline_arrow_upward_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_money"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="275dp"
        android:layout_marginStart="15dp"

        />
    <Button
        android:id="@+id/setTransactionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="155dp"
        android:background="@drawable/circle2"
        android:text="@string/plus"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/set_transaction_charge_amount"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="275dp"
        android:gravity="center"
        android:layout_marginStart="100dp"
        />

    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:layout_marginTop="215dp"
        android:layout_marginStart="280dp"
        />

    <Button
        android:id="@+id/depositMoneyButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="225dp"
        android:layout_marginStart="290dp"
        android:background="@drawable/baseline_arrow_downward_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deposit_money2"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="275dp"
        android:gravity="center"
        android:layout_marginStart="270dp"
        />

</RelativeLayout>