<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FingerPrintActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podPAY"
        android:fontFamily="@font/alba2"
        android:textSize="20sp"
        android:textColor="@color/orangeRed"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/fingerprint"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/orangeRed"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:textSize="18sp"
        android:textColor="@color/orangeRed"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="210dp"
        android:layout_marginStart="30dp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fingerPrint"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@drawable/fingerprint"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fingerPrint"
        android:text="@string/please_use_finger_print_id_to_login"
        android:textColor="@color/orangeRed"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="400dp"
        android:layout_marginStart="86dp"
        android:text="@string/fingerprint_unavailable_press_button"
        android:textColor="@color/orangeRed"
        android:textSize="20sp" />

    <Button
        android:id="@+id/arrowLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_arrow_circle_right_24"
        android:layout_marginStart="220dp"
        android:layout_marginTop="430dp"
        />

</RelativeLayout>