<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShopFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/shop"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/shape_button4"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/what_will_you_buy_with_your_transaction_charges_today"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search"
            android:text="@string/search"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/shape_button3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tucash_categories"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="220dp"
            android:fontFamily="sans-serif-black"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="265dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFood"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/food"
                    android:background="@drawable/shape_button5"
                    android:drawableTop="@drawable/food"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/buttonFashion"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fashion"
                    android:background="@drawable/shape_button5"
                    android:drawableTop="@drawable/fashion"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/buttonInsurance"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/insurance"
                    android:background="@drawable/shape_button5"
                    android:drawableTop="@drawable/monitor_heart"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/buttonUtilities"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/utilities"
                    android:background="@drawable/shape_button5"
                    android:drawableTop="@drawable/warehouse"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/buttonElectronics"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/electronics"
                    android:background="@drawable/shape_button5"
                    android:drawableTop="@drawable/cable"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </HorizontalScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="335dp"
            android:fontFamily="sans-serif-black"
            />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shape_button2"
                    android:layout_marginStart="10dp"
                    />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shape_button2"
                    />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shape_button2"
                    />
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_products"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="470dp"
            android:fontFamily="sans-serif-black"
            />
    </RelativeLayout>

</ScrollView>