<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">


    <Button
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podPAY"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:fontFamily="@font/alba2"
        android:textColor="@color/orangeRed"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tucashLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/podpay"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:textSize="20sp"
        android:fontFamily="@font/alba"
        android:textColor="@color/orangeRed"
        />
    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/alba"
        android:text="@string/enter_your_email_and_we_ll_send_you_an_email_to_reset_your_password"
        />
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/custom_email_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/johndoe_gmail_com"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/alba"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_button1"
        />
</RelativeLayout>