<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BuyAirtimeFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_to_mobile_money"
        android:textColor="@color/orangeRed"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/backWithdrawBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="165dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/custom_phone_icon"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="phone|number"
        android:gravity="center"
        android:autofillHints="phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="225dp"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="255dp"
        android:layout_marginStart="20dp"
        android:hint="@string/ksh"
        android:textColorHint="@color/teal_700"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="number"
        android:gravity="center"
        android:autofillHints="phone"
        />

    <Button
        android:id="@+id/withdrawToMobileButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/withdraw"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        />


</RelativeLayout>
