<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podPAY"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:fontFamily="@font/alba2"
        android:textColor="@color/orangeRed"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tucashLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/podpay"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_button1"
        android:layout_marginTop="550dp"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/alba"
        />
    <Button
        android:id="@+id/signInBtn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_button1"
        android:layout_marginTop="550dp"
        android:layout_marginStart="220dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/alba"
        />


</RelativeLayout>